// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-tax-id-input Renders AU Tax Type 1`] = `
<sc-tax-id-input country="AU">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="au_abn" style="display: none;"></sc-input>
    <sc-input label="ABN Number" name="tax_identifier.number">
      <sc-dropdown position="bottom-right" slot="suffix">
        <sc-button caret="" slot="trigger" type="text" style="color: var(--sc-input-label-color);">
          AU ABN
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            CA GST
          </sc-menu-item>
          <sc-menu-item checked="">
            AU ABN
          </sc-menu-item>
          <sc-menu-item>
            UK VAT
          </sc-menu-item>
          <sc-menu-item>
            EU VAT
          </sc-menu-item>
          <sc-menu-item>
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input Renders CA Tax Type 1`] = `
<sc-tax-id-input country="CA">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="ca_gst" style="display: none;"></sc-input>
    <sc-input label="GST Number" name="tax_identifier.number">
      <sc-dropdown position="bottom-right" slot="suffix">
        <sc-button caret="" slot="trigger" type="text" style="color: var(--sc-input-label-color);">
          CA GST
        </sc-button>
        <sc-menu>
          <sc-menu-item checked="">
            CA GST
          </sc-menu-item>
          <sc-menu-item>
            AU ABN
          </sc-menu-item>
          <sc-menu-item>
            UK VAT
          </sc-menu-item>
          <sc-menu-item>
            EU VAT
          </sc-menu-item>
          <sc-menu-item>
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input Renders EU VAT Tax Type 1`] = `
<sc-tax-id-input country="DE">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="eu_vat" style="display: none;"></sc-input>
    <sc-input label="EU VAT" name="tax_identifier.number">
      <sc-dropdown position="bottom-right" slot="suffix">
        <sc-button caret="" slot="trigger" type="text" style="color: var(--sc-input-label-color);">
          EU VAT
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            CA GST
          </sc-menu-item>
          <sc-menu-item>
            AU ABN
          </sc-menu-item>
          <sc-menu-item>
            UK VAT
          </sc-menu-item>
          <sc-menu-item checked="">
            EU VAT
          </sc-menu-item>
          <sc-menu-item>
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input Renders UK VAT Tax Type 1`] = `
<sc-tax-id-input country="GB">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="gb_vat" style="display: none;"></sc-input>
    <sc-input label="UK VAT" name="tax_identifier.number">
      <sc-dropdown position="bottom-right" slot="suffix">
        <sc-button caret="" slot="trigger" type="text" style="color: var(--sc-input-label-color);">
          UK VAT
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            CA GST
          </sc-menu-item>
          <sc-menu-item>
            AU ABN
          </sc-menu-item>
          <sc-menu-item checked="">
            UK VAT
          </sc-menu-item>
          <sc-menu-item>
            EU VAT
          </sc-menu-item>
          <sc-menu-item>
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input Shows the updated labels when modified labels are passed 1`] = `
<sc-tax-id-input other-label="Other test">
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="other" style="display: none;"></sc-input>
    <sc-input label="Other test" name="tax_identifier.number">
      <sc-dropdown position="bottom-right" slot="suffix">
        <sc-button caret="" slot="trigger" type="text" style="color: var(--sc-input-label-color);">
          Other
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            CA GST
          </sc-menu-item>
          <sc-menu-item>
            AU ABN
          </sc-menu-item>
          <sc-menu-item>
            UK VAT
          </sc-menu-item>
          <sc-menu-item>
            EU VAT
          </sc-menu-item>
          <sc-menu-item checked="">
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;

exports[`sc-tax-id-input renders 1`] = `
<sc-tax-id-input>
  <mock:shadow-root>
    <sc-input name="tax_identifier.number_type" value="other" style="display: none;"></sc-input>
    <sc-input label="Other" name="tax_identifier.number">
      <sc-dropdown position="bottom-right" slot="suffix">
        <sc-button caret="" slot="trigger" type="text" style="color: var(--sc-input-label-color);">
          Other
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            CA GST
          </sc-menu-item>
          <sc-menu-item>
            AU ABN
          </sc-menu-item>
          <sc-menu-item>
            UK VAT
          </sc-menu-item>
          <sc-menu-item>
            EU VAT
          </sc-menu-item>
          <sc-menu-item checked="">
            Other
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </sc-input>
  </mock:shadow-root>
</sc-tax-id-input>
`;
